Backported to Minecraft 1.16.5